# dnsrest-proxy

./: DnsProxy.hs  DnsProxyCore.hs  LICENSE  README.md  Tests.hs  dnsrest-proxy.cabal
