cabal-version:      2.4
name:               dnsrest-proxy
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
build-type:         Simple

executable DnsProxy
  main-is:          DnsProxy.hs
  other-modules:    DnsProxyCore
  build-depends:
      base >=4.12 && <5
    , bytestring
    , dns
    , network
    , http-client
    , http-client-tls
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
    , RecordWildCards

test-suite dnsrest-proxy-test
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  other-modules:    DnsProxyCore
  build-depends:
      base >=4.12 && <5
    , dns
  default-language: Haskell2010
